# SimpleSideCpp

./: CMakeLists.txt  compile_commands.json
include/: app.h  component.h  consts.h  input.h  page.h  renderer.h  state_machine.h  text_component_state.h  utils.h
src/: app.cpp  component.cpp  input.cpp  main.cpp  page.cpp  renderer.cpp  state_machine.cpp  text_component_state.cpp  utils.cpp
